fully working movement

--- a/code/7.14jt.BasicShapesCam.html
+++ b/code/7.14jt.BasicShapesCam.html
@@ -9,7 +9,11 @@
   <body onload="main()" onresize="resizeCanvas()">
     <canvas id="webgl" width="600" height="600">
     Please use a browser that supports "canvas"
-    </canvas>
+	</canvas>
+	<p>
+		Use WASD keys to move around and arrow keys to rotate camera
+	</p>
+
 	<p>
 	<!-- Make a 'div' element to hold changeable HTML made in our JavaScript file;
 		 (where? look inside main(), inside its 'tick()' function, where we
