--- a/code/7.14jt.BasicShapesCam.html
+++ b/code/7.14jt.BasicShapesCam.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,43 +7,35 @@
 	<!--	Create the HTML5 'canvas' element in which we will run WebGL
 	-->
   <body onload="main()" onresize="resizeCanvas()">
-    <canvas id="webgl" width="600" height="600">
-    Please use a browser that supports "canvas"
-	</canvas>
-	<p>
-		Use WASD keys to move around and arrow keys to rotate camera
-	</p>
+      <canvas id="webgl" width="600" height="600">
+          Please use a browser that supports "canvas"
+      </canvas>
+      <p>
+          Use WASD keys to move around and arrow keys to rotate camera
+      </p>
 
-	<p>
-	<!-- Make a 'div' element to hold changeable HTML made in our JavaScript file;
-		 (where? look inside main(), inside its 'tick()' function, where we
-		 display the 'current angle' value.
-	-->
-	<div id= ShapeName></div> 
-	<!-- Fill this HTML tag with JavaScript-generated text that names the shape displayed
-	To change shapes, users press the 'Next' button, which calls the 'nextShape()' function-->
-	Displayed Shape: 
-	<!--
-	-->	<button type="button" onClick='nextShape()'>Next</button><BR> 
+      <p>
+          The stationary red, green, and blue lines correspond to the x, y, and z axes respectively
+      <p>
+          The moving red, green, and blue lines correspond to the local x, y, and z axes respectively for that joint
+      </p>
 
-		<!--BUTTONS: commands below create HTML push-buttons with labels
-			Spin <<, runStop, and Spin >>.  
-		When users click the button, HTML calls JavaScript functions
-			"spinDown()", "runStop()" and "spinUp()"   -->
-      <button type="button" onclick="spinDown()">Spin << </button>
-	  <button type="button" onclick="runStop()">Run/Stop</button>
-      <button type="button" onclick="spinUp()">Spin >> </button>
-    </p>
-	<!--	Load in the JavaScript libraries supplied by our textbook 
-			(Matsuda et al., 2013 WebGL Programming Guide) that help us
-			with WebGL programming:
-	-->
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix-quat03.js"></script>
-	<!--	Finally, load in our own JavaScript program file.
-	-->
-    <script src="BasicShapesCam.js"></script>
+      <p>
+          Drag the mouse horizontally to rotate the center crystal around the vertical axis
+      <p>
+          Drag the mouse vertically to rotate the center crystal around a horizontal axis perpendicular to the camera's aim
+      </p>
+
+      <!--	Load in the JavaScript libraries supplied by our textbook
+            (Matsuda et al., 2013 WebGL Programming Guide) that help us
+            with WebGL programming:
+    -->
+      <script src="../lib/webgl-utils.js"></script>
+      <script src="../lib/webgl-debug.js"></script>
+      <script src="../lib/cuon-utils.js"></script>
+      <script src="../lib/cuon-matrix-quat03.js"></script>
+      <!--	Finally, load in our own JavaScript program file.
+    -->
+      <script src="BasicShapesCam.js"></script>
   </body>
 </html>
